# org-mcp

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: config.rs  lib.rs  main.rs  server.rs
src/emacs/: client.rs  mod.rs
src/models/: event.rs  habit.rs  inbox_item.rs  mod.rs  task.rs
src/parser/: headline.rs  mod.rs  org.rs  properties.rs  timestamp.rs
src/roam/: database.rs  mod.rs  models.rs
src/tools/: agenda.rs  habits.rs  inbox.rs  mod.rs  tasks.rs
tests/fixtures/: calendar.org  habits.org  inbox.org
