[package]
name = "org-mcp"
version = "0.1.0"
edition = "2024"
authors = ["Ioannis Canellos <iocanel@gmail.com>"]
description = "MCP server for org-agenda integration"
license = "MIT"
repository = "https://github.com/iocanel/org-mcp"

[dependencies]
# MCP SDK
rmcp = { version = "0.5", features = ["server", "macros", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Schema generation for tool parameters
schemars = { version = "1.0", features = ["chrono04"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Regex for parsing
regex = "1"
lazy_static = "1.4"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
directories = "5"
toml = "0.8"

# Path expansion
shellexpand = "3"

# SQLite for org-roam database
rusqlite = { version = "0.32", features = ["bundled"] }

# Directory utilities
dirs = "6"

# UUID generation
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
mockall = "0.12"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
tokio-test = "0.4"

[profile.release]
lto = true
strip = true
